src/components/Contact/Contact.css
:root {
  --text-dim: #888888;
  --site-blue: #4662ab;
  --site-green: #aab847;
  --text-normal: #333333;
}

#Contact-page{
 scroll-margin-top: 30px;
}

.contact-container {
  padding: 30px 10%;
  margin: 40px auto;
  overflow: hidden;
}

.wrapper {
  margin-top: 5%;
  display: flex;
  gap: 40px;
  flex-wrap: wrap;
}

.map-wrapper {
  flex: 1;
}

.map {
  min-width: 400px;
  width: 100%;
  height: 90%;
  min-height: 350px;
  border: 1px solid var(--site-green);
  border-radius: 4px;
  overflow: hidden;
}

.align-center {
  display: flex;
  align-items: center;
  justify-content: space-around;
  padding: 2%;
}

.make-it-flex {
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
}

.horizontal-rule {
  border: 1px solid var(--site-blue);
}

.form-wrapper {
  flex: 1;
  min-width: 350px;
}

.form-group {
  display: flex;
  flex-direction: column;
  flex: 1;
  margin-bottom: 40px;
}

.form-group label {
  font-weight: bold;
}

.contact-subheading {
  color: var(--site-green);
  margin-bottom: 35px;
  text-align: justify;
}

.form-group input,
.form-group textarea {
  padding: 10px;
  border: 1px solid var(--text-dim);
  border-radius: 4px;
  &:focus {
    outline: none;
    border-color: var(--site-green);
    box-shadow: 2px 2px 5px rgba(170, 184, 71, 0.5);
  }
}
.form-group textarea {
  resize: none;
}

.submit-btn {
  background-color: var(--site-blue);
  color: white;
  padding: 10px 20px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-size: 1rem;
  float: right;
  display: flex;
  align-items: center;
  gap: 10px;
}
.submit-btn:hover {
  background-color: var(--site-green);
  box-shadow: 1px 1px 3px 1px #4662ab33;
  scale: 1.01;
  transition: 0.3s ease-in-out;
}

@media screen and (max-width: 395px) {
  .contact-container {
    padding: 5%;
    margin: 0;
    
  }
}

